# llama.cpp

./: build-deb.sh  convert_hf_to_gguf.py
examples/rpc/: rpc-server.cpp
examples/server/webui/src/components/: ChatScreen.tsx  Header.tsx  Sidebar.tsx
ggml/src/ggml-cpu/: CMakeLists.txt  ggml-cpu-quants.c  ggml-cpu-quants.h
ggml/src/ggml-cpu/alib/: CMakeLists.txt  alib_cpu.cpp
ggml/src/ggml-cpu/alib/dsdk/include/: acode.h  alib.h  asock.h  atype.h
ggml/src/ggml-cpu/alib/include/: alib_cpu.h
gguf-py/gguf/: constants.py
src/: llama-arch.cpp  llama-arch.h  llama-mmap.cpp  llama-model.cpp
tools/server/webui/: index.html
tools/server/webui/src/components/: ChatScreen.tsx  Header.tsx  Sidebar.tsx
